<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.mycoach.app.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"/>

    <fragment
        android:id="@+id/clientsFragment"
        android:name="com.mycoach.app.ui.clients.ClientsFragment"
        android:label="@string/nav_clients"/>

    <fragment
        android:id="@+id/sessionsFragment"
        android:name="com.mycoach.app.ui.sessions.SessionsFragment"
        android:label="@string/nav_sessions"/>

    <fragment
        android:id="@+id/paymentsFragment"
        android:name="com.mycoach.app.ui.payments.PaymentsFragment"
        android:label="@string/nav_payments"/>

</navigation>
